align headers and fix broken image link

--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,6 @@ article img{
     margin-bottom: 20px;
 }
 
-.container-fluid seb{
-    background-color: aqua;
+.packageHeader{
+	margin-bottom: 40px;
 }
